syntax = "proto3";
package login;

option go_package = "github.com/Hinkku-Company/aphrodite_monolite/src/shared/grpc/v1";
import "proto/response.proto";

message AccessResponse {
    string token = 1;
    string token_refresh = 2;
}

message CredentialsInput {
  string user_name = 1;
  string password = 2; 
}

message TokenAccessInput {
  string token = 1;
  string token_refresh = 2;
}

service LoginService {
    rpc GetLogin (CredentialsInput) returns (AccessResponse);
    rpc LogOut (TokenAccessInput) returns (response.Empty);
}